fixed horizontal scroll on hero

--- a/public/global.css
+++ b/public/global.css
@@ -81,7 +81,7 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
@@ -91,6 +91,6 @@ body {
   color: #555;
   letter-spacing: -1px;
   background-color: var(--color-white);
-  overflow: auto;
-  height: 100%;
+  overflow-x: hidden;
+  /* height: 100%; */
 }
